@@ -9,7 +9,7 @@
 
 \usage{
 resizableLabel(item=c("S", "T", "theta", "sigmaTheta",
-  "nitrate", "nitrite", "oxygen", "phosphate", "silicate", "tritium",
+  "nitrate", "nitrite", "oxygen", "phosphate", "silicate", "tritium", "spice",
   "p", "z", "distance",
   "heading", "pitch", "roll"),
   axis=c("x", "y"))}
