@@ -1,4 +1,5 @@
 0.6-x
+- plotProfile() and plot.ctd(): add xtype="spice"
 - add data(geosecs235)
 - plotProfile() and plot.ctd(): add argument 'keepNA'
 - as.ctd(): add arguments 'other' and 'missingValue'
